# mcv

./: .editorconfig  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  gradlew  gradlew.bat
.github/workflows/: android.yml  release.yml  rust.yml
android/: .editorconfig  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/config/ktlint/: baseline.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/multicardvault/: MainActivity.kt
android/app/src/main/java/app/multicardvault/core/: ByteStrings.kt  RustMcvCore.kt
android/app/src/main/java/app/multicardvault/data/: CardInventoryDao.kt  CardInventoryEntities.kt  CardInventoryRepository.kt  McvDatabase.kt  RoomVaultRepository.kt  VaultDao.kt  VaultEntities.kt
android/app/src/main/java/app/multicardvault/features/cards/: CardInspectionModels.kt  InspectCardUseCase.kt  RecoverInterruptedReissueUseCase.kt  StartCardSetReissueUseCase.kt  VerifyCardSetUseCase.kt
android/app/src/main/java/app/multicardvault/features/create/: CardLifecycleViewModelDelegate.kt  CreateVaultUseCase.kt  CreateVaultViewModel.kt  SafeThresholdPreset.kt
android/app/src/main/java/app/multicardvault/features/unlock/: UnlockVaultUseCase.kt
android/app/src/main/java/app/multicardvault/features/vault/: ListVaultsUseCase.kt  UpdateVaultUseCase.kt  VaultEntryModels.kt
android/app/src/main/java/app/multicardvault/nfc/: MifareClassicCardLayout.kt  MifareClassicNfcRepository.kt  NdefNfcRepository.kt  NfcCardResult.kt  NfcRepository.kt
android/app/src/main/java/app/multicardvault/security/: DeviceSecretRepository.kt  KeystoreDeviceSecretRepository.kt
android/app/src/main/java/app/multicardvault/settings/: AppSettingsRepository.kt
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/test/java/app/multicardvault/: MainDispatcherRule.kt  McvAppTest.kt
android/app/src/test/java/app/multicardvault/core/: RustMcvCoreTest.kt
android/app/src/test/java/app/multicardvault/data/: CardInventoryRepositoryTest.kt
android/app/src/test/java/app/multicardvault/features/cards/: InspectCardUseCaseTest.kt  RecoverInterruptedReissueUseCaseTest.kt  StartCardSetReissueUseCaseTest.kt  VerifyCardSetUseCaseTest.kt
android/app/src/test/java/app/multicardvault/nfc/: MifareClassicCardLayoutTest.kt
android/app/src/test/java/app/multicardvault/settings/: DataStoreAppSettingsRepositoryTest.kt
android/config/detekt/: detekt.yml
bindings/kotlin/app/multicardvault/uniffi/: mcv_uniffi.kt
crates/mcv-core/: Cargo.toml
crates/mcv-core/examples/: m1_vector.rs  mvp_vectors.rs
crates/mcv-core/src/: lib.rs
crates/mcv-crypto/: Cargo.toml
crates/mcv-crypto/src/: lib.rs
crates/mcv-format/: Cargo.toml
crates/mcv-format/src/: lib.rs
crates/mcv-shamir/: Cargo.toml
crates/mcv-shamir/src/: lib.rs
crates/mcv-uniffi/: Cargo.toml  uniffi.toml
crates/mcv-uniffi/src/: lib.rs
docs/: android-architecture.md  card-format-v1.md  crypto-design.md  known-issues.md  manual-nfc-test-record.md  overview.md  recovery-model.md  release-notes-v0.1.0.md  release-process.md  threat-model.md  vault-format-v1.md
docs/adr/: 0001-use-multiple-rust-crates.md  0002-mvp-does-not-support-cross-device-recovery.md  0003-store-vault-data-on-cuid-cards.md
docs/agents/: domain.md  issue-tracker.md
docs/superpowers/plans/: 2026-06-11-m0-project-skeleton.md  2026-06-11-m2-android-integration.md  2026-06-11-m3-nfc-read-write.md  2026-06-12-cuid-card-storage.md  2026-06-13-card-lifecycle-foundation.md
docs/superpowers/specs/: 2026-06-11-m0-project-skeleton-design.md  2026-06-12-cuid-card-storage-design.md  2026-06-13-card-lifecycle-foundation-design.md
test-vectors/: README.md
test-vectors/aead/: vector-001.json
test-vectors/card-payload-v1/: vector-001.json
test-vectors/hkdf/: vector-001.json
test-vectors/m1-core/: vector-001.json
test-vectors/shamir/: vector-001.json
test-vectors/vault-blob-v1/: vector-001.json
tools/mcv-bindgen/: Cargo.toml
tools/mcv-bindgen/src/: main.rs
(+4 files in other folders)
