[workspace]
members = [
    "crates/mcv-core",
    "crates/mcv-crypto",
    "crates/mcv-format",
    "crates/mcv-shamir",
    "crates/mcv-uniffi",
    "tools/mcv-bindgen",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/H-Chris233/mcv"
rust-version = "1.80"

[workspace.dependencies]
argon2 = "0.5"
camino = "1"
cargo_metadata = "0.19"
chacha20poly1305 = "0.10"
ciborium = "0.2"
hkdf = "0.12"
rand = "0.8"
rand_chacha = "0.3"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
sharks = "0.5"
thiserror = "2"
uniffi = "0.29.4"
zeroize = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
