[package]
name = "mcv-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mcv-crypto = { path = "../mcv-crypto" }
mcv-format = { path = "../mcv-format" }
mcv-shamir = { path = "../mcv-shamir" }
rand.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand_chacha.workspace = true

[lints]
workspace = true
