[package]
name = "mcv-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
mcv-format = { path = "../mcv-format" }
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand_chacha.workspace = true

[lints]
workspace = true
