[package]
name = "mcv-format"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ciborium.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true

[lints]
workspace = true
