[package]
name = "mcv-shamir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blahaj.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand_chacha.workspace = true

[lints]
workspace = true
