[package]
name = "mcv-uniffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mcv-core = { path = "../mcv-core" }
mcv-format = { path = "../mcv-format" }
thiserror.workspace = true
uniffi = { workspace = true }

[lints]
workspace = true
