[package]
name = "mcv-bindgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
cargo_metadata.workspace = true
uniffi = { workspace = true, features = ["bindgen"] }

[lints]
workspace = true
